Dark table header style for bootstrap tables

--- a/ConsultorioSeguros/Views/Home/Index.cshtml
+++ b/ConsultorioSeguros/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 <div class="hookNotify"></div>
 
 <table id="tablaSeguro" class="table table-striped table-bordered" style="width:100%">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>#</th>
             <th>Código</th>
