--- a/ConsultorioSeguros/Views/Home/Clientes.cshtml
+++ b/ConsultorioSeguros/Views/Home/Clientes.cshtml
@@ -27,7 +27,7 @@
 <div class="hookNotify"></div>
 
 <table id="tablaCliente" class="table table-striped table-bordered" style="width:100%">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>#</th>
             <th>Cédula</th>
