--- a/ConsultorioSeguros/Views/Home/ClientesAsegurados.cshtml
+++ b/ConsultorioSeguros/Views/Home/ClientesAsegurados.cshtml
@@ -40,7 +40,7 @@
 <hr />
 
 <table id="tablaCliente" class="table table-striped table-bordered" style="width:100%">
-    <thead>
+    <thead class="thead-dark">
         <tr>
             <th>#</th>
             <th>Cédula</th>
