Actions buttons style on table has been changed to dropdown list

--- a/ConsultorioSeguros/Views/Home/Clientes.cshtml
+++ b/ConsultorioSeguros/Views/Home/Clientes.cshtml
@@ -205,7 +205,7 @@
                     {
                         "data": "cedula", "name": "Actions", "mRender": function (data, type, row, meta) {
                             var actions =
-                                '<a href="javascript:void(0);" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editarModal">'
+                                @*'<a href="javascript:void(0);" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editarModal">'
                                     + '<i class="fa fa-edit" ></i> '
                                 + '</a> '
                                 + '<a href="@System.Configuration.ConfigurationManager.AppSettings["AppHost"]/Home/SegurosAsignados?cedula=' + data + '" class="btn btn-secondary btn-sm">'
@@ -213,7 +213,23 @@
                                 + '</a> '
                                 + '<a href="javascript:void(0);" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#eliminarModal">'
                                     + '<i class="fa fa-trash" ></i> '
-                                + '</a>';
+                                + '</a>';*@
+                                '<div class="dropdown">' +
+                                    '<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">'+
+                                        ''+
+                                    '</button>'+
+                                    '<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">'+
+                                        '<a href="javascript:void(0);" class="dropdown-item" data-toggle="modal" data-target="#editarModal">'+
+                                            '<i class="fa fa-edit" ></i> Editar'+
+                                        '</a>'+
+                                        '<a href="@System.Configuration.ConfigurationManager.AppSettings["AppHost"]/Home/SegurosAsignados?cedula=' + data + '" class="dropdown-item">' +
+                                            '<i class="fa fa-plus" ></i> Asignar Seguro' +
+                                        '</a>' +
+                                        '<a href="javascript:void(0);" class="dropdown-item" data-toggle="modal" data-target="#eliminarModal">' +
+                                            '<i class="fa fa-trash" ></i> Eliminar'
+                                        '</a>' +
+                                    '</div>' +
+                                '</div>';
                             return actions;
                         }
                     }
